# ServerlessRust

./: .gitignore  Cargo.toml  Makefile  README.md  template.yaml
src/: main.rs
templates/: infrastructure.yaml
tests/: common.rs  integration_test.rs
