[package]
name = "example-rust-app"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.82", features = ["derive"] }
serde_json = { version = "1.0.33", features = ["raw_value"] }

lambda_runtime = "0.4"

[dev-dependencies]
pretty_assertions = "0.4.0"
lambda = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "aws-sdk-lambda" }
smithy-http = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "smithy-http" }
tokio-test = "*"
http = "0.2.3"
junit-report = "0.6.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
